# context-specific-table-navigation-2023

./: README.md
dataset/: .~lock.global_data.csv#  dataset.csv  requirements.txt  results.ipynb
navigation_modes/: CMakeLists.txt  package.xml
navigation_modes/action/: GoLocation.action  SetBehaviour.action
navigation_modes/config/: custom.yaml  move_base.yaml
navigation_modes/config/navigation/: costmap_common_params_custom.yaml  costmap_common_params_move_base.yaml  global_costmap_params_map.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
navigation_modes/launch/: custom_navigation_budapest_15cm.launch  custom_navigation_budapest_3cm.launch  custom_navigation_leon_15cm.launch  custom_navigation_leon_3cm.launch  move_base_navigation_budapest_15cm.launch  move_base_navigation_budapest_3cm.launch  move_base_navigation_leon_15cm.launch
navigation_modes/launch/navigation/: amcl_rb1_base.launch  move_base_amcl_custom.launch  move_base_amcl_move_base.launch
navigation_modes/locations/: budapest_15cm.yaml  budapest_3cm.yaml  leon_15cm.yaml  leon_3cm.yaml
navigation_modes/maps/: budapest_map.yaml  leon_map.pgm  leon_map.yaml
navigation_modes/scripts/: biscee_patrol_sm.py  biscee_tables_sm.py  biscee_tables_sm_movements.py  location_service.py  ultrasound_converter.py
navigation_modes/srv/: LocationID.srv
navigation_modes/worlds/: budapest_testbed.world  leon_testbed.world
paper_results/: global_data.csv  paper_results.ipynb
